--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
